--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ before_script:
   - git config --global user.email "1sanyamkapoor@gmail.com"
   - git config --global user.name "activatedgeek"
 script:
+  - make build
   - make publish-ci
 branches:
   only:
