--- a/config.toml
+++ b/config.toml
@@ -14,6 +14,7 @@ disqusShortname = "activatedgeek"
   readMore = ""
   copyright = "&copy; Sanyam Kapoor"
   socialIconStyle = "circle"
+  travisbadgeurl = "https://travis-ci.org/activatedgeek/blog.svg?branch=master"
 
 [social]
   twitterbird = "https://www.twitter.com/1sanyamk"
