fixed twitter handle

--- a/config.toml
+++ b/config.toml
@@ -16,7 +16,7 @@ disqusShortname = "activatedgeek"
   socialIconStyle = "circle"
 
 [social]
-  twitterbird = "https://www.twitter.com/1sanyamk"
+  twitterbird = "https://www.twitter.com/activatedgeek"
   githubalt = "https://www.github.com/activatedgeek"
   linkedin = "https://in.linkedin.com/in/sanyamkapoor"
   quora = "https://www.quora.com/profile/Sanyam-Kapoor"
