Before the Flood: A review

--- a/config.toml
+++ b/config.toml
@@ -9,7 +9,7 @@ disqusShortname = "activatedgeek"
   name = "Sanyam Kapoor"
   description = "Programmer - Blogger - DevOps"
   bio = "Programmer - Blogger - DevOps"
-  twitter = "1sanyamk"
+  twitter = "activatedgeek"
   enableRSS = true
   readMore = ""
   copyright = "&copy; Sanyam Kapoor"
