--- a/.travis.yml
+++ b/.travis.yml
@@ -10,25 +10,12 @@ install:
   - sudo pip install Pygments
 
 script:
-  # Build latest CV
   - cd cv && mkdir build && pdflatex -interaction=nonstopmode -halt-on-error -output-directory build CV.tex && cd ..
-  # Add CV to static content
   - mkdir -p static/files && mv cv/build/CV.pdf static/files
-  # Build blog
   - hugo version && hugo -v
 
-# deploy:
-#   # Deploy to Github Releases
-#   provider: releases
-#   api_key: '$GITHUB_ACCESS_TOKEN'
-#   file:
-#     - 'cv/build/CV.pdf'
-#   skip_cleanup: true
-#   on:
-#     tags: true
-
 after_success:
-  - nvm install stable
-  - npm i netlify-cli -g
-  # Deploy to Netlify
-  - netlify deploy -t $NETLIFY_ACCESS_TOKEN -s $NETLIFY_SITE_ID -p public
+  - curl -LO https://github.com/netlify/netlifyctl/releases/download/v0.1.1/netlifyctl-linux-amd64-v0.1.1.tar.gz
+  - tar -xzvf netlifyctl-linux-amd64-v0.1.1.tar.gz
+  - ./netlifyctl version
+  - ./netlifyctl deploy -D -A $NETLIFY_ACCESS_TOKEN
