--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@ dist: trusty
 
 install:
   - curl -LO https://github.com/gohugoio/hugo/releases/download/v0.25.1/hugo_0.25.1_Linux-64bit.deb && sudo dpkg -i hugo_0.25.1_Linux-64bit.deb
-  - sudo apt -qq update && sudo apt install -y --no-install-recommends python python-pip texlive-latex-base texlive-fonts-recommended texlive-fonts-extra texlive-latex-extra
+  # - sudo apt-get install textlive-full
+  - sudo apt-get install texlive-latex-base texlive-latex-extra texlive-fonts-recommended texlive-fonts-extra
   - sudo pip install Pygments
 
 script:
