--- a/.travis.yml
+++ b/.travis.yml
@@ -16,10 +16,12 @@ before_script:
   - pygmentize -V
   - hugo version
   - ./netlifyctl version
+  - mkdir -p cv/build static/files
 
 script:
-  - cd cv && mkdir build && pdflatex -interaction=nonstopmode -halt-on-error -output-directory build CV.tex SOP_NYU_Courant.tex && cd ..
-  - mkdir -p static/files && mv cv/build/*.pdf static/files
+  - cd cv && pdflatex -interaction=nonstopmode -halt-on-error -output-directory build CV.tex && cd ..
+  - cd cv && pdflatex -interaction=nonstopmode -halt-on-error -output-directory build SOP_NYU_Courant.tex && cd ..
+  - mv cv/build/*.pdf static/files
   - hugo -v
 
 after_success:
