Add new formatted 1-page resume

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ before_script:
 
 script:
   - cd cv && pdflatex -interaction=nonstopmode -halt-on-error -output-directory build CV.tex && cd ..
+  - cd cv && pdflatex -interaction=nonstopmode -halt-on-error -output-directory build resume.tex && cd ..
   - cd cv && pdflatex -interaction=nonstopmode -halt-on-error -output-directory build SOP_NYU_Courant.tex && cd ..
   - mv cv/build/*.pdf static/files
   - hugo -v
