--- a/.travis.yml
+++ b/.travis.yml
@@ -19,10 +19,11 @@ before_script:
   - mkdir -p cv/build static/files
 
 script:
-  - cd cv && pdflatex -interaction=nonstopmode -halt-on-error -output-directory build CV.tex && cd ..
-  - cd cv && pdflatex -interaction=nonstopmode -halt-on-error -output-directory build resume.tex && cd ..
-  - cd cv && pdflatex -interaction=nonstopmode -halt-on-error -output-directory build SOP_NYU_Courant.tex && cd ..
+  - cd cv && pdflatex -interaction=nonstopmode -halt-on-error -output-directory build resume.tex && cd $TRAVIS_BUILD_DIR
+  - cd cv && pdflatex -interaction=nonstopmode -halt-on-error -output-directory build SOP_NYU_Courant.tex && cd $TRAVIS_BUILD_DIR
   - mv cv/build/*.pdf static/files
+  # for backward link compatibility
+  - cd static/files && cp resume.pdf cv.pdf && cd $TRAVIS_BUILD_DIR
   - hugo -v
 
 after_success:
