--- a/.travis.yml
+++ b/.travis.yml
@@ -16,14 +16,13 @@ before_script:
   - pygmentize -V
   - hugo version
   - ./netlifyctl version
-  - mkdir -p cv/build static/files
 
 script:
-  - cd cv && pdflatex -interaction=nonstopmode -halt-on-error -output-directory build resume.tex && cd $TRAVIS_BUILD_DIR
-  - cd cv && pdflatex -interaction=nonstopmode -halt-on-error -output-directory build SOP_NYU_Courant.tex && cd $TRAVIS_BUILD_DIR
+  - cd cv && pdflatex -interaction=nonstopmode -halt-on-error -output-directory build resume.tex && cd ..
+  - cd cv && pdflatex -interaction=nonstopmode -halt-on-error -output-directory build SOP_NYU_Courant.tex && cd ..
   - mv cv/build/*.pdf static/files
   # for backward link compatibility
-  - cd static/files && cp resume.pdf cv.pdf && cd $TRAVIS_BUILD_DIR
+  # - cd static/files && cp resume.pdf cv.pdf && cd ../..
   - hugo -v
 
 after_success:
