--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ script:
   - cd cv && pdflatex -interaction=nonstopmode -halt-on-error -output-directory build SOP_NYU_Courant.tex && cd ..
   - mv cv/build/*.pdf static/files
   # for backward link compatibility
-  # - cd static/files && cp resume.pdf cv.pdf && cd ../..
+  - cd static/files && cp resume.pdf cv.pdf && cd ../..
   - hugo -v
 
 after_success:
