--- a/.travis.yml
+++ b/.travis.yml
@@ -21,9 +21,8 @@ script:
   - cd cv && pdflatex -interaction=nonstopmode -halt-on-error -output-directory build resume.tex && cd ..
   - cd cv && pdflatex -interaction=nonstopmode -halt-on-error -output-directory build SOP_NYU_Courant.tex && cd ..
   - mv cv/build/*.pdf static/files
-  # for backward link compatibility
-  - cd static/files && cp resume.pdf cv.pdf && cd ../..
   - hugo -v
+  - cp _redirects public/
 
 after_success:
   - ./netlifyctl deploy -A $NETLIFY_ACCESS_TOKEN
