--- a/.travis.yml
+++ b/.travis.yml
@@ -14,11 +14,7 @@ before_script:
   - ./netlifyctl version
 
 script:
-  - cd cv && pdflatex -interaction=nonstopmode -halt-on-error -output-directory build resume.tex && cd ..
-  - cd cv && pdflatex -interaction=nonstopmode -halt-on-error -output-directory build SOP_NYU_Courant.tex && cd ..
-  - mv cv/build/*.pdf static/files
-  - hugo -v
-  - cp _redirects public/
+  - make public
 
 after_success:
-  - ./netlifyctl deploy -A $NETLIFY_ACCESS_TOKEN
+  - make deploy
