Deploy ML Reading group presentations

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,11 @@ before_script:
   - ./netlifyctl version
 
 script:
+  # Build Presentations from the ML Reading Group and add to website files
+  - git clone https://$GH_ACCESS_TOKEN@github.com/activatedgeek/ml-reading-group
+  - cd ml-reading-group && make all && cd ..
+  - mkdir -p static/mlrg-presentations && mv ml-reading-group/dist/* static/mlrg-presentations
+  # Build Website
   - make public
 
 after_success:
