--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,12 @@ sudo: required
 dist: trusty
 
 install:
-  - make install
+  - curl -LO https://github.com/gohugoio/hugo/releases/download/v0.29/hugo_0.29_Linux-64bit.deb && sudo dpkg -i hugo_0.29_Linux-64bit.deb
+  - curl -LO https://github.com/netlify/netlifyctl/releases/download/v0.1.4/netlifyctl-linux-amd64.tar.gz && tar -xzvf netlifyctl-linux-amd64.tar.gz
+  #- sudo apt-get install textlive-full
+  - sudo apt-get install texlive-latex-base texlive-latex-extra texlive-fonts-recommended texlive-fonts-extra
+  #- sudo tlmgr update --all
+  - sudo pip install -r requirements.txt
 
 before_script:
   - pdflatex --version
@@ -22,4 +27,4 @@ script:
   - make public
 
 after_success:
-  - make deploy
+  - ./netlifyctl deploy -A $(NETLIFY_ACCESS_TOKEN)
