--- a/.travis.yml
+++ b/.travis.yml
@@ -27,4 +27,4 @@ script:
   - make public
 
 after_success:
-  - ./netlifyctl deploy -A $(NETLIFY_ACCESS_TOKEN)
+  - ./netlifyctl deploy -A $NETLIFY_ACCESS_TOKEN
