Do you generalize well?

--- a/config.yaml
+++ b/config.yaml
@@ -20,7 +20,7 @@ blackfriday:
 
 params:
   intro: Sanyam Kapoor
-  description: Machine Learning Researcher, Automation First;
+  description: Machine Learning; Do you generalize well?
   authorImage: https://graph.facebook.com/10203983748456800/picture?type=large
   enableRSS: true
   dateFormat: 'Jan 2, 2006'
