--- a/config.yaml
+++ b/config.yaml
@@ -20,7 +20,7 @@ blackfriday:
 
 params:
   intro: Sanyam Kapoor
-  description: Machine Learning; Do you generalize well?
+  description: do you generalize well?
   authorImage: https://graph.facebook.com/10203983748456800/picture?type=large
   enableRSS: true
   dateFormat: 'Jan 2, 2006'
@@ -33,10 +33,8 @@ params:
     stackoverflow: 2425365
     hackernews: activatedgeek
     quora: Sanyam-Kapoor
-    angellist: sanyam-kapoor
     linkedin: sanyamkapoor
     twitter: activatedgeek
-    facebook: activatedgeek
   menu:
     main:
       - name: blog
