--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ sudo: required
 dist: trusty
 
 install:
-  - curl -LO https://github.com/gohugoio/hugo/releases/download/v0.30.2/hugo_0.30.2_Linux-64bit.deb && sudo dpkg -i hugo_0.30.2_Linux-64bit.deb
-  - curl -LO https://github.com/netlify/netlifyctl/releases/download/v0.1.5/netlifyctl-linux-amd64.tar.gz && tar -xzvf netlifyctl-linux-amd64.tar.gz
+  - curl -LO https://github.com/gohugoio/hugo/releases/download/v0.36/hugo_0.36_Linux-64bit.deb && sudo dpkg -i hugo_0.36_Linux-64bit.deb
+  - curl -LO https://github.com/netlify/netlifyctl/releases/download/v0.3.1/netlifyctl-linux-amd64-0.3.1.tar.gz && tar -xzvf netlifyctl-linux-amd64-0.3.1.tar.gz
   #- sudo apt-get install textlive-full
   - sudo apt-get install texlive-latex-base texlive-latex-extra texlive-fonts-recommended texlive-fonts-extra
   #- sudo tlmgr update --all
