Fix layouts, complete overall theme transition

--- a/config.yaml
+++ b/config.yaml
@@ -1,67 +1,42 @@
-baseURL: 'http://localhost:1313/'
-languageCode: en
-defaultContentLanguage: en
-title: Even - A super concise theme for Hugo
-enableRobotsTXT: true
-enableEmoji: true
+baseURL: 'https://www.sanyamkapoor.com'
 theme: even
-hasCJKLanguage: true
-paginate: 3
-disqusShortname: ''
-googleAnalytics: ''
-copyright: ''
-author:
-  name: olOwOlo
+relativeURLs: true
+canonifyurls: true
+enableRobotsTXT: true
+languageCode: en-us
+metaDataFormat: yaml
+pygmentsCodeFences: true
+pygmentsStyle: emacs
 sitemap:
   changefreq: weekly
   priority: 0.5
   filename: sitemap.xml
+
+disqusShortname: sanyamkapoor
+googleAnalytics: UA-87707145-1
+
+title: Sanyam Kapoor
+author:
+  name: Sanyam Kapoor
+
 menu:
   main:
     - name: Home
       weight: 10
       identifier: home
       url: /
-    - name: Archives
-      weight: 20
-      identifier: archives
-      url: /post/
-    - name: Tags
+    - name: Résumé
       weight: 30
-      identifier: tags
-      url: /tags/
-    - name: Categories
-      weight: 40
-      identifier: categories
-      url: /categories/
+      identifier: resume
+      url: /files/resume.pdf
+
 params:
   version: 3.x
-  debug: false
-  since: '2017'
-  logoTitle: Even
-  keywords:
-    - Hugo
-    - theme
-    - even
-  description: Hugo theme even example site.
-  archivePaginate: 3
-  dateFormatToUse: '2006-01-02'
-  moreMeta: false
+  since: '2015'
+  logoTitle: Sanyam Kapoor
+  dateFormatToUse: 'Mon, Jan 2 2006'
+  moreMeta: true
   toc: true
-  autoCollapseToc: false
-  fancybox: true
-  mathjax: false
-  mathjaxEnableSingleDollar: false
-  postMetaInFooter: true
-  linkToMarkDown: false
-  contentCopyright: ''
-  changyanAppid: ''
-  changyanAppkey: ''
-  livereUID: ''
-  baidu_push: false
-  baidu_analytics: ''
-  baidu_verification: ''
-  google_verification: ''
   customCSS: []
   customJS: []
   publicCDN:
@@ -75,36 +50,8 @@ params:
       src="https://cdn.jsdelivr.net/npm/slideout@1.0.1/dist/slideout.min.js"
       integrity="sha256-t+zJ/g8/KXIJMjSVQdnibt4dlaDxc9zXr/9oNPeWqdg="
       crossorigin="anonymous"></script>
-    fancyboxJs: >-
-      <script
-      src="https://cdn.jsdelivr.net/npm/@fancyapps/fancybox@3.1.20/dist/jquery.fancybox.min.js"
-      integrity="sha256-XVLffZaxoWfGUEbdzuLi7pwaUJv1cecsQJQqGLe7axY="
-      crossorigin="anonymous"></script>
-    fancyboxCss: >-
-      <link rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@fancyapps/fancybox@3.1.20/dist/jquery.fancybox.min.css"
-      integrity="sha256-7TyXnr2YU040zfSP+rEcz29ggW4j56/ujTPwjMzyqFY="
-      crossorigin="anonymous">
-  busuanzi:
-    enable: false
-    siteUV: true
-    sitePV: true
-    pagePV: true
-  reward:
-    enable: false
-    wechat: /path/to/your/wechat-qr-code.png
-    alipay: /path/to/your/alipay-qr-code.png
   social:
-    a-email: 'mailto:your@email.com'
     b-stack-overflow: 'http://localhost:1313'
     c-twitter: 'http://localhost:1313'
-    d-facebook: 'http://localhost:1313'
     e-linkedin: 'http://localhost:1313'
-    f-google: 'http://localhost:1313'
     g-github: 'http://localhost:1313'
-    h-weibo: 'http://localhost:1313'
-    i-zhihu: 'http://localhost:1313'
-    j-douban: 'http://localhost:1313'
-    k-pocket: 'http://localhost:1313'
-    l-tumblr: 'http://localhost:1313'
-    m-instagram: 'http://localhost:1313'
