--- a/.travis.yml
+++ b/.travis.yml
@@ -10,23 +10,22 @@ before_install:
 install:
   - curl -LO https://github.com/gohugoio/hugo/releases/download/v0.49/hugo_0.49_Linux-64bit.deb && sudo dpkg -i *.deb && rm *.deb
   - curl -LO https://github.com/netlify/netlifyctl/releases/download/v0.4.0/netlifyctl-linux-amd64-0.4.0.tar.gz && tar -xzvf *.tar.gz && rm *.tar.gz
-  # - sudo apt-get install textlive-full
-  # - sudo apt-get install texlive-latex-base texlive-latex-extra texlive-fonts-recommended texlive-fonts-extra
-  # - sudo tlmgr update --all
   - sudo pip install -r requirements.txt
+  ### LaTeX related ###
+  - sudo apt-get install texlive-latex-base texlive-latex-extra texlive-fonts-recommended texlive-fonts-extra
 
 before_script:
-  # - pdflatex --version
   - pygmentize -V
   - hugo version
   - ./netlifyctl version
+  ### LaTeX related ###
+  - pdflatex --version
 
 script:
-  # Build Resume and SOP
-  # - git clone https://$GH_ACCESS_TOKEN@github.com/activatedgeek/resume
-  # - cd resume && make all && cd ..
-  # - mv resume/dist/*.pdf static/files
-  # Build Website
+  ### Build Resume ###
+  - git clone https://$GH_ACCESS_TOKEN@github.com/activatedgeek/resume
+  - cd resume && make all && cd ..
+  - mv resume/dist/*.pdf static/files
   - make public
 
 after_success:
